# dingtalk-rs

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  msg.rs
tests/: test.rs  test_wechatwork.rs
